fixed overflow

--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,4 +1,6 @@
 .body {
+  min-width: $viewport--sm;
+  
   .wrapper {
     max-width: $viewport--xxl;
     margin: auto;
@@ -20,6 +22,10 @@
   &__header {
     position: absolute;
     width: 100%;
+
+    @include viewport--md {
+      position: relative;
+    }
   }
 
   &__promo {
@@ -53,10 +59,14 @@
 
   &__types {
     padding-top: 149px;
-    padding-bottom: 128px;
+    padding-bottom: 98px;
 
     @include viewport--md {
       padding-top: 50px;
+      padding-bottom: 50px;
+    }
+
+    @include viewport--sm {
       padding-bottom: 34px;
     }
   }
@@ -75,11 +85,11 @@
 
   &__footer {
     margin-top: 152px;
-    margin-bottom: 98px;
+    margin-bottom: 80px;
 
     @include viewport--md {
       margin-top: 64px;
-      margin-bottom: 50px;
+      margin-bottom: 43px;
     }
 
     @include viewport--sm {
