--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -22,6 +22,7 @@
   }
 
   &__map-box {
+    position: relative;
     margin-top: 41px;
 
     @include viewport--md {
@@ -29,9 +30,38 @@
     }
   }
 
+  &__map-area {
+    position: absolute;
+    z-index: -10;
+    width: 100%;
+  }
+
+  &__map-frame {
+    width: 100%;
+    height: 530px;
+
+    @include viewport--md {
+      height: 545px;
+    }
+
+    @include viewport--sm {
+      height: 250px;
+    }
+  }
+
   &__map-img {
     display: block;
     margin: auto;
+    height: 530px;
+
+    @include viewport--md {
+      width: auto;
+      height: 545px;
+    }
+
+    @include viewport--sm {
+      height: 250px;
+    }
   }
 
   &__list {
@@ -42,16 +72,16 @@
     justify-content: space-around;
     width: 67%;
     margin: auto;
-    margin-top: 38px;
+    margin-top: 32px;
 
     @include viewport--md {
-      width: 80%;
-      margin-top: 20px;
+      width: 91%;
+      margin-top: 15px;
     }
 
     @include viewport--sm {
-      width: 90%;
-      margin-top: 30px;
+      width: 89%;
+      margin-top: 23px;
     }
   }
 
@@ -64,7 +94,7 @@
     }
 
     @include viewport--sm {
-      margin-bottom: 18px;
+      margin-bottom: 21px;
       padding-right: 10px;
 
       &--mail {
