--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,4 +1,11 @@
 .main-nav {
+  padding-bottom: 8px;
+  &__wrapper {
+    @include viewport--md {
+      background-color: $color-white;
+    }
+  }
+
   a {
     color: rgba($color-white, 0.7);
 
@@ -57,10 +64,13 @@
 
 .main-nav__toggle {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-self: center;
   top: 0;
   right: 0;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   background-image: url("../img/sprite/icon-close.svg");
   background-repeat: no-repeat;
   background-position: center;
